# pet-match

./: .gitignore  ARCHITECTURE.md  ASSIGNMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rules.yaml
app/: dependencies.py  main.py
app/api/: evaluate.py  rules.py
app/core/: engine.py  models.py
tests/: conftest.py  test_engine.py  test_evaluate.py  test_rules_reload.py
